package main

import (
	"log"
	"net/http"
	"os"

	"github.com/Nurkanat-hub/MyHealthbite/api-gateway/internal/handler"
	"github.com/Nurkanat-hub/MyHealthbite/api-gateway/internal/middleware"
	"github.com/Nurkanat-hub/MyHealthbite/api-gateway/internal/service"
	"github.com/gorilla/handlers"
	"github.com/gorilla/mux"
	"github.com/joho/godotenv"
	"google.golang.org/grpc"
)

func main() {
	// –ó–∞–≥—Ä—É–∂–∞–µ–º .env –ø–µ—Ä–µ–º–µ–Ω–Ω—ã–µ
	if err := godotenv.Load(); err != nil {
		log.Println("No .env file found, using system env")
	}

	port := os.Getenv("PORT")
	if port == "" {
		port = "8080"
	}

	// –û—Å–Ω–æ–≤–Ω–æ–π —Ä–æ—É—Ç–µ—Ä
	r := mux.NewRouter()

	// üîì –û—Ç–∫—Ä—ã—Ç—ã–µ –º–∞—Ä—à—Ä—É—Ç—ã
	r.HandleFunc("/login", handler.LoginHandler).Methods("POST")
	r.HandleFunc("/register", handler.RegisterHandler).Methods("POST")

	// üîê –ó–∞—â–∏—â—ë–Ω–Ω—ã–µ –º–∞—Ä—à—Ä—É—Ç—ã
	protected := r.PathPrefix("/api").Subrouter()
	protected.Use(middleware.JWTMiddleware)

	// üîê –°—É—â–µ—Å—Ç–≤—É—é—â–∏–µ –∑–∞—â–∏—â—ë–Ω–Ω—ã–µ
	protected.HandleFunc("/profile", handler.ProfileHandler).Methods("GET")
	protected.HandleFunc("/profile", handler.UpdateProfileHandler).Methods("PUT")
	protected.HandleFunc("/account", handler.DeleteAccountHandler).Methods("DELETE")
	protected.HandleFunc("/stats/{user_id}", handler.GetStatsHandler).Methods("GET")
	protected.HandleFunc("/stats/update", handler.UpdateStatsHandler).Methods("POST")
	protected.HandleFunc("/stats/reset", handler.ResetStatsHandler).Methods("POST")
	protected.HandleFunc("/stats/{user_id}", handler.DeleteStatsHandler).Methods("DELETE")

	// –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ user-service –ø–æ gRPC

	connUser, err := grpc.Dial("localhost:50051", grpc.WithInsecure())
	if err != nil {
		log.Fatalf("Failed to connect to user-service: %v", err)
	}
	defer connUser.Close()

	userClient := service.NewUserClient(connUser)
	handler.SetUserClient(userClient)

	// –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ stats-service –ø–æ gRPC
	connStats, err := grpc.Dial("localhost:50054", grpc.WithInsecure())
	if err != nil {
		log.Fatalf("Failed to connect to stats-service: %v", err)
	}
	defer connStats.Close()

	statsClient := service.NewStatsClient(connStats)
	handler.SetStatsClient(statsClient)

	// ‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ payment-service –ø–æ gRPC
	connPayment, err := grpc.Dial("localhost:50057", grpc.WithInsecure())
	if err != nil {
		log.Fatalf("Failed to connect to payment-service: %v", err)
	}
	defer connPayment.Close()

	paymentClient := service.NewPaymentClient(connPayment)
	paymentHandler := handler.NewPaymentHandler(paymentClient)

	// ‚úÖ –†–æ—É—Ç—ã –æ–ø–ª–∞—Ç—ã
	protected.HandleFunc("/payment", paymentHandler.MakePayment).Methods("POST")
	protected.HandleFunc("/payment/history", paymentHandler.GetPaymentHistory).Methods("GET")

	// –ó–∞–ø—É—Å–∫
	log.Printf("üöÄ API Gateway is running on port %s", port)
	corsHandler := handlers.CORS(
		handlers.AllowedOrigins([]string{"http://localhost:3000", "http://localhost:5173"}),
		handlers.AllowedMethods([]string{"GET", "POST", "PUT", "DELETE", "OPTIONS"}),
		handlers.AllowedHeaders([]string{"Content-Type", "Authorization"}),
	)(r)
	if err := http.ListenAndServe(":"+port, corsHandler); err != nil {
		log.Fatalf("Server failed: %v", err)
	}
}
